--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,66 @@
     --color-azul: #08accc;
 }
 
+.color_primario {
+  color: #08accc
 
-p {
-    font-size: 21px;
 }
+
+.font-poppins {
+  font-family: 'Poppins', sans-serif;
+}
+
+.boton_reserva {    
+    width: 250px;
+    height: 52px;
+    background: var(--color-azul);
+    border-color: transparent;
+    cursor: pointer;
+    border-radius: 30px;
+    font-size: 21px;
+    transition: linear 0.2s;
+    color: white;
+    font-weight:bold;
+    margin: 30px;
+}
+
+.boton_reserva:hover {
+    width: 295px;
+    height: 52px;
+    cursor: pointer;
+    border-radius: 30px;
+    font-size: 21px;
+    /* border-bottom: 1.5px solid #25d366; */
+    border-bottom: 1.5px solid black;
+    background-color: rgb(250, 250, 250);
+    /* color: #25d366; */
+    color: black;
+}
+
+.simple-map-container {
+    margin: 0 auto;
+    width: 100%;
+    height: 300px;
+    border: 0px solid black;
+
+}
+
+h1{
+    font-size: 32px;
+  }
+  
+  h2{
+    font-size: 25px;
+  }
+  
+  h3{
+    font-size: 21px;
+  }
+  
+  h4{
+    font-size: 43px;
+  }
+  
+  h5{
+    font-size: 14px;
+  }
