--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,20 @@ h1{
   h5{
     font-size: 14px;
   }
+
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-20px);
+    }
+    60% {
+      transform: translateY(-10px);
+    }
+  }
+  
+  .volvemos-animation {
+    display: inline-block;
+    animation: bounce 9s infinite;
+  }
